--- a/templates/index.html
+++ b/templates/index.html
@@ -88,6 +88,8 @@
   let add_post_url = "[[=XML(add_post_url)]]";
   let modify_post_url = "[[=XML(modify_post_url)]]";
   let delete_post_url = "[[=XML(delete_post_url)]]";
+  let add_comment_url = "[[=XML(add_comment_url)]]";
+  let delete_comment_url = "[[=XML(delete_comment_url)]]";
   let my_callback_url = "[[=XML(my_callback_url)]]";
 </script>
 <script src="js/index.js"></script>
