--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,12 @@
 <div class="section" id="vue-target" v-cloak>
   <!-- Put here your Vue.js template -->
   <div class="container block">
-    <h1 class="title">Postlandia</h1>
+    <h1 class="title">Good Vibez</h1>
   </div>
   <div class="container block">
     <button @click="set_add_status(true)" class="button is-primary">
       <i class="fa fa-plus fa-fw"></i>
+      Create a New Post
     </button>
   </div>
   
@@ -51,11 +52,6 @@
         <!-- Left side -->
         <div class="level-left">
           <div class="level-item">
-            <div class="container block">
-              <button @click="set_add_comment_status(r._idx, true)" class="button is-primary">
-                <i class="fa fa-comment fa-fw"></i>
-              </button>
-            </div>
             <span @mouseleave="show_likers_out(r._idx)">
               <span @mouseenter="show_likers_over(r._idx)">
                 <span>
@@ -81,6 +77,29 @@
           </div>
         </div>
       </nav>
+
+      <div class="box" style="background-color:rgba(241, 239, 239, 0.418);" v-for="(comment, index) in r.comment_content">
+        <div class="content">
+          <p style="color:rgba(145, 145, 145, 0.767)">
+            {{r.comment_name[index]}}
+          </p>
+
+          <p>
+            {{comment}}
+          </p>
+        </div>
+        <div class="level-right">
+          <div v-if="r.comment_email[index] === current_email" class="level-item">
+            <button @click="delete_comment(r._idx, index)" class="button is-danger"> <i class="fa fa-trash fa-2x"></i></button>
+        </div>
+        </div>
+      </div>
+      <div class="container block">
+        <button @click="set_add_comment_status(r._idx, true)" class="button is-primary">
+          <i class="fa fa-comment fa-fw"></i>
+          Add a Comment
+        </button>
+      </div>
       <div v-if="r.add_comment_mode" class = "container block">
         <div class="form">
           <div class="field">
@@ -95,20 +114,6 @@
               <input type="submit" @click="set_add_comment_status(r._idx, false)" value="Cancel" class="button is-warning">
             </div>
           </div>
-        </div>
-      </div>
-      <div class="box" style="background-color:rgba(224, 224, 224, 0.418);" v-for="(comment, index) in r.comment_content">
-        <div class="content">
-          <p style="color:rgba(145, 145, 145, 0.767)">
-            {{r.comment_name[index]}}
-          </p>
-
-          <p>
-            {{comment}}
-          </p>
-        </div>
-        <div v-if="r.comment_email[index] === current_email" class="level-item">
-            <button @click="delete_comment(r._idx, index)" class="button is-danger"> <i class="fa fa-trash fa-2x"></i></button>
         </div>
       </div>
     </div>
