--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,14 @@
       Create a New Post
     </button>
   </div>
+  <div class="control block">
+      <input class="input" type="text" v-model="query" @keyup="search" />
+  </div>
+
+  <div v-for="r in results">{{r}}</div>
+
+
+
   
   <div v-if="add_mode" class = "container block">
     <div class="form">
@@ -129,6 +137,7 @@
   let add_comment_url = "[[=XML(add_comment_url)]]";
   let delete_comment_url = "[[=XML(delete_comment_url)]]";
   let my_callback_url = "[[=XML(my_callback_url)]]";
+  let search_url = "[[=XML(search_url)]]";
 </script>
 <script src="js/index.js"></script>
 [[end]]
