--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,12 @@
       Create a New Post
     </button>
   </div>
-  
+  <div class="control block">
+    <input class="input" type="text" v-model="query" @keyup="search" />
+  </div>
+
+  <div v-for="r in results">{{r}}</div>
+
   <div v-if="add_mode" class = "container block">
     <div class="form">
       <div class="field">
@@ -78,6 +83,7 @@
         </div>
       </nav>
 
+     
       <div class="box" style="background-color:rgba(241, 239, 239, 0.418);" v-for="(comment, index) in r.comment_content">
         <div class="content">
           <p style="color:rgba(145, 145, 145, 0.767)">
@@ -94,12 +100,16 @@
         </div>
         </div>
       </div>
-      <div class="container block">
-        <button @click="set_add_comment_status(r._idx, true)" class="button is-primary">
-          <i class="fa fa-comment fa-fw"></i>
-          Add a Comment
-        </button>
-      </div>
+      <nav class="level">
+        <div class="level-left">
+          <div class="container block">
+            <button @click="set_add_comment_status(r._idx, true)" class="button is-primary">
+              <i class="fa fa-comment fa-fw"></i>
+              Add a Comment
+            </button>
+          </div>
+        </div>
+      </nav>
       <div v-if="r.add_comment_mode" class = "container block">
         <div class="form">
           <div class="field">
@@ -132,6 +142,7 @@
   let add_comment_url = "[[=XML(add_comment_url)]]";
   let delete_comment_url = "[[=XML(delete_comment_url)]]";
   let my_callback_url = "[[=XML(my_callback_url)]]";
+  let search_url = "[[=XML(search_url)]]";
 </script>
 <script src="js/index.js"></script>
 [[end]]
