--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,30 @@
 
 <div class="section" id="vue-target" v-cloak>
   <!-- Put here your Vue.js template -->
+  <nav>
+    <div class="level-right">
+      <div class="control block">
+        <input class="input" type="text" v-model="query" @keyup="search" placeholder="Search for Users" style="width: 500px;" />
+      </div>
+    </div>
+    <div class="level-right" v-for="r in results">
+      <div class="button" :href="'[[ URL('/profile/') ]]' + r[1]">
+        {{r}} 
+      </div>
+    </div>
+  </nav>
+  
   <div class="container block">
     <h1 class="title">Good Vibez</h1>
   </div>
+  
   <div class="container block">
     <button @click="set_add_status(true)" class="button is-primary">
       <i class="fa fa-plus fa-fw"></i>
       Create a New Post
     </button>
   </div>
-  <div class="control block">
-    <input class="input" type="text" v-model="query" @keyup="search" />
-  </div>
-
-  <div v-for="r in results">{{r}}</div>
+  
 
   <div v-if="add_mode" class = "container block">
     <div class="form">
