--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
       </div>
     </div>
     <div class="level-right" v-for="r in results">
-      <div class="button" :href="'[[ URL('/profile/') ]]' + r[1]">
-        {{r}} 
-      </div>
+      <a class="button" :href="'[[=URL('profile') ]]' + '/' + r[2]">
+        {{r[0]}} 
+      </a>
     </div>
   </nav>
   
