--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,9 @@
     <div class="media-content">
       <div class="content">
         <p style="color:rgba(145, 145, 145, 0.767)">
+          <a class="button" :href="'[[=URL('profile') ]]' + '/' + r.user_id">
           {{r.name}}
+          </a>
         </p>
         
         <p>
