--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,31 @@
 
 <div class="section" id="vue-target" v-cloak>
   <!-- Put here your Vue.js template -->
+  <nav>
+    <div class="level-right">
+      <div class="control block">
+        <input class="input" type="text" v-model="query" @keyup="search" placeholder="Search for Users" style="width: 500px;" />
+      </div>
+    </div>
+    <div class="level-right" v-for="r in results">
+      <a class="button" :href="'[[=URL('profile') ]]' + '/' + r[2]">
+        {{r[0]}} 
+      </a>
+    </div>
+  </nav>
+  
   <div class="container block">
     <h1 class="title">Good Vibez</h1>
   </div>
+  
   <div class="container block">
     <button @click="set_add_status(true)" class="button is-primary">
       <i class="fa fa-plus fa-fw"></i>
       Create a New Post
     </button>
   </div>
-  <div class="control block">
-      <input class="input" type="text" v-model="query" @keyup="search" />
-  </div>
-
-  <div v-for="r in results">{{r}}</div>
-
-
-
   
+
   <div v-if="add_mode" class = "container block">
     <div class="form">
       <div class="field">
@@ -49,7 +56,9 @@
     <div class="media-content">
       <div class="content">
         <p style="color:rgba(145, 145, 145, 0.767)">
+          <a class="button" :href="'[[=URL('profile') ]]' + '/' + r.user_id">
           {{r.name}}
+          </a>
         </p>
         
         <p>
@@ -86,6 +95,36 @@
         </div>
       </nav>
 
+     
+      <div class="box" style="background-color:rgba(241, 239, 239, 0.418);" v-for="(comment, index) in r.comment_content">
+        <div class="content">
+          <p style="color:rgba(145, 145, 145, 0.767)">
+<!--            {{r.comment_name[index]}}-->
+            <a class="button" :href="'[[=URL('profile') ]]' + '/' + r.comment_authuserid[index]">
+              {{r.comment_name[index]}}
+            </a>
+          </p>
+
+          <p>
+            {{comment}}
+          </p>
+        </div>
+        <div class="level-right">
+          <div v-if="r.comment_email[index] === current_email" class="level-item">
+            <button @click="delete_comment(r._idx, index)" class="button is-danger"> <i class="fa fa-trash fa-2x"></i></button>
+        </div>
+        </div>
+      </div>
+      <nav class="level">
+        <div class="level-left">
+          <div class="container block">
+            <button @click="set_add_comment_status(r._idx, true)" class="button is-primary">
+              <i class="fa fa-comment fa-fw"></i>
+              Add a Comment
+            </button>
+          </div>
+        </div>
+      </nav>
       <div v-if="r.add_comment_mode" class = "container block">
         <div class="form">
           <div class="field">
@@ -102,31 +141,6 @@
           </div>
         </div>
       </div>
-      <div class="box" style="background-color:rgba(224, 224, 224, 0.418);" v-for="(comment, index) in r.comment_content">
-        <div class="content">
-          <p style="color:rgba(145, 145, 145, 0.767)">
-            {{r.comment_name[index]}}
-          </p>
-
-          <p>
-            {{comment}}
-          </p>
-        </div>
-        <div v-if="r.comment_email[index] === current_email" class="level-item">
-            <button @click="delete_comment(r._idx, index)" class="button is-danger"> <i class="fa fa-trash fa-2x"></i></button>
-        </div>
-      </div>
-      <nav class="level">
-        <div class="level-left">
-          <div class="container block">
-            <button @click="set_add_comment_status(r._idx, true)" class="button is-primary">
-              <i class="fa fa-comment fa-fw"></i>
-              Add a Comment
-            </button>
-          </div>
-        </div>
-      </nav>
-
     </div>
   </div>
 </div>
