--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,16 +1,21 @@
 [[extend "layout.html"]]
+<style>
+  [v-cloak] {
+       display: none;
+  }
+</style>
 
-<div class="section">
+<div class="section" id="vue-target">
   <!-- Put the table here -->
   <p class="title is-1"> [[=user.first_name]] [[=user.last_name]]'s Profile</p>
   <nav class="level">
     <div class="level-left">
       <span>
-        <button class="button is-info is-rounded">Follow</button>
+        <button @click="follow_user( '[[=user.email]]' )" class="button is-info is-rounded" >Follow</button>
         <button class="button is-rounded">Following</button>
   
-        <i v-if="r.thumbs_down" @click="modify_post(r._idx, current_email, false, false)" ></i>
-        <i v-if="!r.thumbs_down" @click="modify_post(r._idx, current_email, false, true)"></i>
+        <!-- <i v-if="r.thumbs_down" @click="modify_post(r._idx, current_email, false, false)" ></i>
+        <i v-if="!r.thumbs_down" @click="modify_post(r._idx, current_email, false, true)"></i> -->
       </span>
     </div>
   </nav>
@@ -86,3 +91,17 @@
     [[pass]]
 
 </div>
+
+[[block page_scripts]]
+<script>
+  let load_posts_url = "[[=XML(load_posts_url)]]";
+  let add_post_url = "[[=XML(add_post_url)]]";
+  let modify_post_url = "[[=XML(modify_post_url)]]";
+  let delete_post_url = "[[=XML(delete_post_url)]]";
+  let add_comment_url = "[[=XML(add_comment_url)]]";
+  let delete_comment_url = "[[=XML(delete_comment_url)]]";
+  let search_url = "[[=XML(search_url)]]";
+  let follow_user_url = "[[=XML(follow_user_url)]]";
+</script>
+<script src="js/index.js"></script>
+[[end]]
