--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,8 +12,9 @@
     <div class="level-left">
       <span>
         <button @click="follow_user( '[[=user.email]]' )" class="button is-info is-rounded" >Follow</button>
-        <button class="button is-rounded">Following</button>
-  
+      </span>
+      <span>
+        <button @click="unfollow_user( '[[=user.email]]' )" class="button is-rounded">Following</button>
         <!-- <i v-if="r.thumbs_down" @click="modify_post(r._idx, current_email, false, false)" ></i>
         <i v-if="!r.thumbs_down" @click="modify_post(r._idx, current_email, false, true)"></i> -->
       </span>
@@ -102,6 +103,8 @@
   let delete_comment_url = "[[=XML(delete_comment_url)]]";
   let search_url = "[[=XML(search_url)]]";
   let follow_user_url = "[[=XML(follow_user_url)]]";
+  let unfollow_user_url = "[[=XML(unfollow_user_url)]]";
+
 </script>
 <script src="js/index.js"></script>
 [[end]]
