adding unfollow feature

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
         <button @click="follow_user( '[[=user.email]]' )" class="button is-info is-rounded" >Follow</button>
       </span>
       <span>
-        <button @click="unfollow_user( '[[=user.email]]' )" class="button is-rounded">Following</button>
+        <button @click="unfollow_user( '[[=user.email]]' )" class="button is-rounded">Unfollow</button>
         <!-- <i v-if="r.thumbs_down" @click="modify_post(r._idx, current_email, false, false)" ></i>
         <i v-if="!r.thumbs_down" @click="modify_post(r._idx, current_email, false, true)"></i> -->
       </span>
