--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
   <div class="container block">
     <button @click="set_add_status(true)" class="button is-primary">
       <i class="fa fa-plus fa-fw"></i>
-      Create a New Post
+      Start a Conversation...
     </button>
   </div>
   
@@ -95,7 +95,14 @@
         </div>
       </nav>
 
-     
+    <div v-if="!r.show_comment_mode">
+      <button @click="set_show_comment_status(true, r._idx)" class="button is-warning is-light">
+          <i style="padding-right: 6px" class="fa fa-eye "></i>
+          Show comments
+      </button>
+    </div>
+
+     <div v-if="r.show_comment_mode">
       <div class="box" style="background-color:rgba(241, 239, 239, 0.418);" v-for="(comment, index) in r.comment_content">
         <div class="content">
           <p style="color:rgba(145, 145, 145, 0.767)">
@@ -123,6 +130,14 @@
             </button>
           </div>
         </div>
+        
+        <div class="level-right">
+          <button @click="set_show_comment_status(false, r._idx)" class="button is-danger is-light">
+            <i style="padding-right: 6px" class="fa fa-eye-slash"></i>
+            Hide comments
+          </button>
+        </div>
+        
       </nav>
       <div v-if="r.add_comment_mode" class = "container block">
         <div class="form">
@@ -140,6 +155,8 @@
           </div>
         </div>
       </div>
+     </div>
+
     </div>
   </div>
 </div>
